--- a/client/src/styles/globals/_boilertemplate.scss
+++ b/client/src/styles/globals/_boilertemplate.scss
@@ -1,3 +1,5 @@
+@use './variables' as *;
+
 hmtl{
   box-sizing: border-box;
   font-size: 100%;
@@ -9,7 +11,8 @@ hmtl{
 
 body{
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  background-color: hsl(0, 0%, 11%);
+  // background-color: hsl(0, 0%, 11%);
+  background-color: $body-bg;
   color: hsl(0, 0%, 100%);
   line-height: 1.5;
   font-weight: 400;
