--- a/client/src/styles/globals/_boilertemplate.scss
+++ b/client/src/styles/globals/_boilertemplate.scss
@@ -1,19 +1,26 @@
-html{
+@use './colors' as *;
+
+html {
   box-sizing: border-box;
   font-size: 100%;
 }
 
-*, *::before,*::after{
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
-body{
+body {
   margin: 0;
   padding: 0;
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  // background-color: hsl(0, 0%, 11%);
-  // background-color: $body-bg;
+  font-family: 'Montserrat', sans-serif;
+  background-color: $body-bg-light;
   color: hsl(0, 0%, 100%);
   line-height: 1.5;
   font-weight: 400;
+}
+
+li {
+  list-style: none;
 }
