--- a/client/src/styles/globals/_colors.scss
+++ b/client/src/styles/globals/_colors.scss
@@ -1,7 +1,8 @@
 // Vaporwave Color Scheme
 
 // Colors
-$body-bg: #0091ea;        // Bright Blue
+$body-bg-light: #b7bfa0;        // Bright Blue
+$nav-bg-dark: #242424;
 $primary: #ff6ad5;        // Neon Pink
 $secondary: #ffdb58;      // Bright Yellow
 $success: #00f764;        // Neon Green
