--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,10 +1,11 @@
 @forward "./globals/index";
 @forward "./layout/index";
 
+// *{border: 1px solid;}
+
 :root {
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
