--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -33,12 +33,15 @@ button {
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
+  color: white;
   cursor: pointer;
   transition: border-color 0.25s;
+  transition: .3s;
 }
 
 button:hover {
-  border-color: #646cff;
+  background-color: #232323;
+  transition: .3s;
 }
 
 button:focus,
