--- a/client/src/styles/globals/_boilertemplate.scss
+++ b/client/src/styles/globals/_boilertemplate.scss
@@ -16,7 +16,7 @@ body {
   padding: 0;
   font-family: 'Montserrat', sans-serif;
   background-color: $body-bg-light;
-  color: hsl(0, 0%, 100%);
+  color: $nav-bg-dark;
   line-height: 1.5;
   font-weight: 400;
 }
