fix base layout

--- a/client/src/layout/Baselayout.scss
+++ b/client/src/layout/Baselayout.scss
@@ -7,7 +7,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  // height: calc(100vh - rem(74));
+  height: calc(100vh - rem(74));
   text-align: center;
 
 }
