--- a/client/src/styles/globals/_typography.scss
+++ b/client/src/styles/globals/_typography.scss
@@ -8,14 +8,15 @@ h3 {
   margin-top: 0;
 }
 
-h1{
+h1 {
   // font-size: clamp(1.75rem, 1rem + 2vw, 2.62rem);
   font-size: clamp(rem(28), rem(16) + 2vw, rem(42));
 }
 
-h2{
+h2 {
   // font-size: clamp(1.62rem, 0.88rem + 2vw, 2.5rem);
   font-size: clamp(rem(26), rem(14) + 2vw, rem(40));
+  margin: 0;
 }
 
 p {
