--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -26,40 +26,45 @@ a:hover {
 
 
 button {
-  border-radius: 8px;
+  // border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
-  color: white;
+  // background-color: #1a1a1a;
+  background-color: transparent;
+
   cursor: pointer;
-  transition: border-color 0.25s;
+  // transition: border-color 0.25s;
   transition: .3s;
+  color: rgb(94, 94, 94);
+  border-radius: 0;
+
 }
 
 button:hover {
-  background-color: #232323;
-  transition: .3s;
+  // background-color: #232323;
+  // transition: .3s;
+  text-decoration: underline;
 }
 
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
+// button:focus,
+// button:focus-visible {
+//   outline: 4px auto -webkit-focus-ring-color;
+// }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
+// @media (prefers-color-scheme: dark) {
+//   :root {
+//     color: #213547;
+//     background-color: #ffffff;
+//   }
 
-  a:hover {
-    color: #747bff;
-  }
+//   a:hover {
+//     color: #747bff;
+//   }
 
-  button {
-    background-color: #f9f9f9;
-  }
-}
+//   button {
+//     background-color: #f9f9f9;
+//   }
+// }
