--- a/client/src/pages/Home/Home.scss
+++ b/client/src/pages/Home/Home.scss
@@ -1,6 +1,7 @@
 @use '../../styles/utils/' as*;
 
 .home {
+  margin-top: 6rem;
   display: flex;
   flex-direction: column;
   align-items: center;
