--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -37,7 +37,7 @@ button {
 
   cursor: pointer;
   // transition: border-color 0.25s;
-  transition: .3s;
+  // transition: .3s;
   color: rgb(94, 94, 94);
   border-radius: 0;
 
