--- a/client/src/components/Nav/Nav.scss
+++ b/client/src/components/Nav/Nav.scss
@@ -8,7 +8,7 @@
   align-items: center;
 
   & a {
-    color: white;
+    color: $white;
     font-size: rem(16);
 
     @include breakpoint(medium) {
@@ -48,7 +48,7 @@ nav {
   }
 
   &__item a {
-    color: white;
+    color: $white;
     font-weight: 400;
     font-size: rem(14);
   }
@@ -56,7 +56,7 @@ nav {
 
 .dropdown {
   &__icon {
-    background-color: white;
+    background-color: $white;
     color: $nav-bg-dark;
     border-radius: 50%;
     padding: rem(2);
@@ -72,13 +72,13 @@ nav {
   }
 
   &__menu {
-    background-color: white;
+    background-color: $white;
     color: $nav-bg-dark;
     position: absolute;
     top: rem(71);
     right: 0;
     cursor: pointer;
-    border-radius: 0px 0px 0px 10px;
+    border-radius: 0px 0px 0px 6px;
     padding: 0;
     display: none;
     font-size: rem(14);
@@ -101,7 +101,8 @@ nav {
     }
 
     &__item:hover {
-      background-color: rgb(215, 215, 215);
+      background-color: $hover-white;
+      border-radius: 0px 0px 0px 6px;
     }
   }
 }
