--- a/client/src/styles/globals/_colors.scss
+++ b/client/src/styles/globals/_colors.scss
@@ -1,17 +1,19 @@
 // Vaporwave Color Scheme
 
 // Colors
-$body-bg-light: #b7bfa0;        // Bright Blue
+$body-bg-light: #c5cdcf; // Bright Blue
 $nav-bg-dark: #242424;
-$primary: #ff6ad5;        // Neon Pink
-$secondary: #ffdb58;      // Bright Yellow
-$success: #00f764;        // Neon Green
-$info: #01cdfe;           // Bright Cyan
-$warning: #ff61a6;        // Pinkish
-$danger: #ff2965;         // Neon Red
-$light: #9A83D4;          // Pastel Purple
-$dark: #260e37;           // Dark Blueish Purple
+$primary: #ff6ad5; // Neon Pink
+$secondary: #ffdb58; // Bright Yellow
+$success: #00f764; // Neon Green
+$info: #01cdfe; // Bright Cyan
+$warning: #ff61a6; // Pinkish
+$danger: #ff2965; // Neon Red
+$light: #9A83D4; // Pastel Purple
+$dark: #260e37; // Dark Blueish Purple
+$white: rgb(233, 233, 233);
+$hover-white: rgb(215, 215, 215);
 
 // Link Colors
-$link-color: #01cdfe;     // Bright Cyan
+$link-color: #01cdfe; // Bright Cyan
 $link-hover-color: darken($link-color, 10%);
