--- a/client/src/styles/globals/_boilertemplate.scss
+++ b/client/src/styles/globals/_boilertemplate.scss
@@ -24,3 +24,13 @@ body {
 li {
   list-style: none;
 }
+
+input {
+  padding: 4px;
+  color: $nav-bg-dark
+}
+
+input:focus {
+
+  outline: $dark;
+}
