--- a/client/src/layout/Baselayout.scss
+++ b/client/src/layout/Baselayout.scss
@@ -1,6 +1,6 @@
 @use '../styles/utils/' as *;
 
-.main__container{
+.main__container {
   width: min(100% - rem(40), rem(1000));
   margin-inline: auto;
   display: flex;
@@ -9,5 +9,6 @@
   flex-direction: column;
   // height: calc(100vh - rem(74));
   text-align: center;
+  padding: rem(4);
 
 }
