/cards edit aside

--- a/client/src/ui/TextButton/TextButton.scss
+++ b/client/src/ui/TextButton/TextButton.scss
@@ -6,4 +6,14 @@
   &--red {
     color: $danger;
   }
+
+
+}
+
+button:disabled {
+  color: $dark;
+
+  &:hover {
+    text-decoration: none;
+  }
 }
