change default TextButton color

--- a/client/src/ui/TextButton/TextButton.scss
+++ b/client/src/ui/TextButton/TextButton.scss
@@ -3,6 +3,8 @@
 
 .text__button {
 
+  color: $dark;
+
   &--red {
     color: $danger;
   }
@@ -11,7 +13,8 @@
 }
 
 button:disabled {
-  color: $dark;
+
+  color: $body-bg-light;
 
   &:hover {
     text-decoration: none;
