UI:delete /cards

--- a/client/src/pages/Cards/Cards.scss
+++ b/client/src/pages/Cards/Cards.scss
@@ -80,3 +80,13 @@
 
   }
 }
+
+.hover_options {
+  color: $body-bg-light;
+  transition: .1s;
+
+  &:hover {
+    color: $nav-bg-dark;
+    transition: .1s;
+  }
+}
