--- a/client/src/ui/Button/Button.scss
+++ b/client/src/ui/Button/Button.scss
@@ -1,4 +1,5 @@
 @use '../../styles/globals/' as *;
+@use '../../styles/utils/' as *;
 
 .default__button {
   background-color: $nav-bg-dark;
@@ -6,7 +7,8 @@
   border-radius: 3px;
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: rem(8);
+  font-weight: 900;
 
   &:hover {
     text-decoration: none;
